# QQ2024

./: .gitignore  README.cs.md  README.md  problem_info.md  pyproject.toml
src/: environment.py  evaluate.py  main.py  model.py
src/quant/: data.py  files.py  model.py  player.py  queue.py  ranking.py  types.py  utils.py
